made player names changeable, recolored plus/minus btns, added clear button, and added handling for if a game is saved/resumed with zero players

--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 .hide {
     display: none;
 }
+
+.indPlayers {
+    font-weight: bold;
+}
+
+.nav-link {
+    color: white;
+}
+
+.nav-link:hover{
+    color: white;
+}
